# DraftLite

./: .gitignore  CMakeLists.txt  InstallerScript.nsi  README.md  app.aps  app.rc  config.ini  deploy.bat  resource.h  resources.qrc
Resources/PLConfig/: varMap.wgp
Resources/editor/intellisense/: gcode-intellisense.json
Resources/qss/: default.qss
Shader/: ApexCamShader.h  addArrow.geom  addDashed.geom  addDashed1.geom  drawEntityModeDashedLine.frag  drawEntityModeDashedLine.vert  drawEntityModeLine.frag  drawEntityModeLine.vert  drawEntityModePoint.frag  drawEntityModePoint.vert  drawMirroredEntity.vert  drawSelectionBox.frag  drawSelectionBox.vert  drawTick.frag  drawTickText.frag  drawTickText.vert  lineWithBulge.geom
include/Algorithm/: AntColonyOptimize.h  CircleDetector.h  ClusterAlgo.h  PartClassifier.h  PathOptimizer.h  RRT.h  RingDetector.h  RoughingAlgo.h  VisibilityGraph.h
include/Auth/: CounterDownManager.h  KeyFuncs.h  WG_Authorization.h
include/Auth/dongle/: D8.cpp  D8.h  KeyDef.h
include/Common/: AtomicVariables.h  ClipperFuncWrapper.h  Context.h  CraftParamConfig.h  GCodeHelper.h  HistoryCmds.h  MathUtils.h  OpenGLContext.h  ProcessCraft.h  Program.h  ProgressInfo.h  Shader.h
include/Controls/: GCodeController.h  GCodeParseHelper.h  GlobalPLCVars.h  ScadaMessageHandler.h  ScadaNode.h  ScadaScheduler.h  SchedulerTask.h
include/Graphics/: AABB.h  Anchor.h  Arc2D.h  AxisTicker.h  Camera2D.h  Canvas.h  Circle2D.h  ContourTree.h  DrawEntity.h  Line2D.h  OCS.h  Point2D.h  Polyline2D.h  Primitives.h  SelectionBox.h  Sketch.h  Spline2D.h  Text.h
include/IO/: DataBase.h  DxfProcessor.h  ExcelProcessor.h  GCodeProcessor.h  ObjectSerializer.h  Utils.h  XMLProcessor.h
include/ModalEvent/: EntityMirrorModal.h  EntityRotateModal.h  EntityScaleModal.h  EvCanvasSetNewScene.h  EvSendCanvasTag.h  MeasureDimension.h  ModalEvent.h
include/NetWork/: FtpClient.h  MessageValidtor.h  OPClient.h  RedisClient.h
include/Path/: Path.h
include/UI/: AboutVersion.h  ArrayGenerationDlg.h  CanvasGuide.h  CellValueSetDlg.h  ClickableLabel.h  DashBoard.h  DigitalHUD.h  GCodeEditor.h  GLWidget.h  GenEnvolopDlg.h  MainLayer.h  MenuLayerTop.h  MotionControl.h  OpenGLRenderWindow.h  OverallWindow.h  RtcpPanel.h  SearchItemDlg.h  SessionManager.h  SizeDefines.h  SketchInformation.h  SliderBar.h  SpinEditInput.h  TaskFlowGuide.h  TaskListWindow.h  ToDoListItem.h  ToolPanel.h  TransformBaseHint.h  VirtualKeyBoard.h
include/UI/Components/: HmiInterfaceDefines.h  HmiTemplateButton.h  HmiTemplateCraftConfig.h  HmiTemplateLabel.h  HmiTemplateMonitorTool.h  HmiTemplateMsgBox.h  HmiTemplateMultistationMonitor.h  HmiTemplateProgressBar.h  HmiTemplateSectionConfiger.h  HmiTemplateSideNavigator.h  HmiTemplateSliderBar.h  HmiTemplateStationPreview.h  HmiTemplateTableMonitor.h  HmiTemplateWebViewer.h
include/UI/Configer/: FontAttributePanel.h  RegionPlannerConfig.h  RegionPlannerPostItem.h  RegionPlannerPreItem.h  RoughingConfig.h  WorkBlankConfig.h
plugins/: PopUpHint.qml
qml/: PopUpHint.qml  WebViewer.qml
src/Algorithm/: AntColonyOptimize.cpp  CircleDetector.cpp  ClusterAlgo.cpp  PartClassifier.cpp  PathOptimizer.cpp  RRT.cpp  RingDetector.cpp  RoughingAlgo.cpp  VisibilityGraph.cpp
src/Auth/: CounterDownManager.cpp  KeyFuncs.cpp
src/Common/: ClipperFuncWrapper.cpp  ContourTree.cpp  CraftParamConfig.cpp  GCodeHelper.cpp  HistoryCmds.cpp  OpenGLContext.cpp  Program.cpp  ProgressInfo.cpp  Shader.cpp
src/Controls/: GCodeController.cpp  GCodeParseHelper.cpp  GlobalPLCVars.cpp  ScadaMessageHandler.cpp  ScadaNode.cpp  ScadaScheduler.cpp
src/Graphics/: Anchor.cpp  Arc2D.cpp  CanvasCPU.cpp  CanvasGPU.cpp  Circle2D.cpp  ContourTree.cpp  DrawEntityCPU.cpp  DrawEntityGPU.cpp  Line2D.cpp  OCSCPU.cpp  OCSGPU.cpp  Point2D.cpp  Polyline2D.cpp  SelectionBox.cpp  SketchCPU.cpp  SketchGPU.cpp  Spline2D.cpp  Text.cpp
src/IO/: DataBase.cpp  DxfProcessor.cpp  ExcelProcessor.cpp  GCodeProcessor.cpp  ObjectSerializer.cpp  XMLProcessor.cpp
src/ModalEvent/: EntityMirrorModal.cpp  EntityRotateModal.cpp  EntityScaleModal.cpp  EvCanvasSetNewScene.cpp  EvSendCanvasTag.cpp  MeasureDimension.cpp
src/NetWork/: FtpClient.cpp  OPClient.cpp  RedisClient.cpp
src/Path/: Path.cpp
src/Plotter/: qcustomplot.cpp
src/UI/: AboutVersion.cpp  ArrayGenerationDlg.cpp  CanvasGuide.cpp  CellValueSetDlg.cpp  ClickableLabel.cpp  DashBoard.cpp  DigitalHUD.cpp  GCodeEditor.cpp  GLWidget.cpp  GenEnvolopDlg.cpp  MainLayer.cpp  MenuLayerTop.cpp  MotionControl.cpp  OpenGLRenderWindow.cpp  OverallWindow.cpp  RtcpPanel.cpp  SearchItemDlg.cpp  SessionManager.cpp  SketchInformation.cpp  SliderBar.cpp  SpinEditInput.cpp  TaskFlowGuide.cpp  TaskListWindow.cpp  ToDoListItem.cpp  ToolPanel.cpp  TransformBaseHint.cpp  VirtualKeyBoard.cpp  WorkBlankConfig.cpp  main.cpp
src/UI/Components/: HmiInterfaceDefines.cpp  HmiTemplateButton.cpp  HmiTemplateCraftConfig.cpp  HmiTemplateLabel.cpp  HmiTemplateMonitorTool.cpp  HmiTemplateMsgBox.cpp  HmiTemplateProgressBar.cpp  HmiTemplateSectionConfiger.cpp  HmiTemplateSideNavigator.cpp  HmiTemplateSliderBar.cpp  HmiTemplateStationPreview.cpp  HmiTemplateTableMonitor.cpp  HmiTemplateWebViewer.cpp
src/UI/Configer/: FontAttributePanel.cpp  RegionPlannerConfig.cpp  RegionPlannerPostItem.cpp  RegionPlannerPreItem.cpp  RoughingConfig.cpp  WorkBlankConfig.cpp
架构/: 软件架构.emmx
